[package]
name = "ext-authz-core"
description = "Wire contract + canonical request hash for OpenShell egress external-authorization middleware"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
base64 = { workspace = true }
