[package]
name = "ext-authz-demo"
description = "Runnable demo: a HAAP-shaped per-action verifier + a driver exercising the ext-authz middleware"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ext-authz-demo"
path = "src/main.rs"

[dependencies]
ext-authz-core = { workspace = true }
ext-authz-middleware = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
