[package]
name = "ext-authz-middleware"
description = "External per-action authorization middleware for OpenShell sandbox egress (NVIDIA/OpenShell#1733)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ext-authz-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
axum = { workspace = true }
